@@ -12,6 +12,9 @@ What's new in Python 3.0b1?
 Core and Builtins
 -----------------
 
+- Issue #1342: On windows, Python could not start when installed in a
+  directory with non-ascii characters.
+
 - Implement PEP 3121: new module initialization and finalization API.
 
 - Removed the already-defunct ``-t`` option.
